<resources>
    <string name="app_name">Street Fighter</string>
    <string name="name">Nome do personagem</string>
    <string name="country">País de origem</string>
    <string name="save">Salvar</string>
    <string name="update">Alterar</string>
    <string name="delete">Remover</string>
    <string name="action_settings">Excluir Todos</string>
    <string name="person_title">Lista de Personagens</string>
    <string name="add">Adicionar</string>
    <string name="add_title">Adicionar Personagem</string>
    <string name="update_title">Alterar Personagem</string>
    <string name="details">Detalhes</string>
    <string name="info">Informações</string>
    <string name="info_name">Nome</string>
    <string name="info_country">País</string>
    <string name="edit">Editar</string>
</resources>